--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.6",
+    "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
