--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "swiper": "^11.2.8",
     "xlsx": "^0.18.5"
